# go-bazel-test

./: BUILD.bazel  Makefile  WORKSPACE  bazel-bin  bazel-go-bazel-test  bazel-out  bazel-testlogs  go.mod
cmd/: BUILD.bazel
cmd/service1/: BUILD.bazel  main.go
cmd/service2/: BUILD.bazel
cmd/service3/: BUILD.bazel
pkg/uuid/: BUILD.bazel  uuid.go
