load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service2_lib",
    srcs = ["main.go"],
    importpath = "github.com/Kurichi/go-bazel-test/cmd/service2",
    visibility = ["//visibility:private"],
    deps = ["//pkg/uuid"],
)

go_binary(
    name = "service2",
    embed = [":service2_lib"],
    visibility = ["//visibility:public"],
    pure = "on",
)
