load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service3_lib",
    srcs = ["main.go"],
    importpath = "github.com/Kurichi/go-bazel-test/cmd/service3",
    visibility = ["//visibility:private"],
    deps = ["//pkg/uuid"],
)

go_binary(
    name = "service3",
    embed = [":service3_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
